# array-api-compat-tf

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs-build.yml  publish.yml
docs/: Makefile  conf.py  helper-functions.rst  index.md
docs/_static/: custom.css
src/array_api_compat_tf/: __init__.py  _pytorch_patches.py
src/array_api_compat_tf/common/: __init__.py  _helpers.py
src/array_api_compat_tf/tensorflow/: __init__.py  _aliases.py  _info.py  _namespace.py  _typing.py  linalg.py
tests/: conftest.py  helpers.py  test_compat.py  test_cross_backend.py  test_cross_backend_numpy.py  test_edge_cases.py  test_namespace_core.py  test_namespace_ops.py
